--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,16 @@
           <scope>runtime</scope>
               
              </dependency>
+             
+             <dependency>
+    <groupId>org.hibernate</groupId>
+    <artifactId>hibernate-java8</artifactId>   
+</dependency>
+
+<dependency>
+<groupId>com.fasterxml.jackson.datatype</groupId>
+<artifactId>jackson-datatype-jsr310</artifactId>
+</dependency>
 		
 	</dependencies>
 
