--- a/src/main/resources/ValidationMessages.properties
+++ b/src/main/resources/ValidationMessages.properties
@@ -1,3 +1,16 @@
 javax.validation.constraints.NotNull.message={0} \u00e9 obrigat\u00f3rio(a)
 
 javax.validation.constraints.Size.message={0} deve ter o tamanho entre {min} e {max}
+
+nivel.not.blank= Nome não deve estar em branco.
+numeroExercicios.not.blank= Senha não deve estar em branco.
+serie.not.blank= E-mail não deve estar em branco.
+intervalo.not.valid= Endereço de e-mail enviado em um formato inválido.
+velocidadeExecucao.not.valid= Endereço de e-mail enviado em um formato inválido.
+frequenciaSemanal.not.valid= Endereço de e-mail enviado em um formato inválido.
+quantidadeDeSemana.not.valid= Endereço de e-mail enviado em um formato inválido.
+metodo.not.valid= Endereço de e-mail enviado em um formato inválido.
+seriesTotais.not.valid= Endereço de e-mail enviado em um formato inválido.
+sistema.not.valid= Endereço de e-mail enviado em um formato inválido.
+divisao.not.valid= Endereço de e-mail enviado em um formato inválido.
+numeroDeTreino.not.valid= Endereço de e-mail enviado em um formato inválido.
